--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test_1",
   "version": "1.0.0",
-  "description": "",
+  "description": "test api 1",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -11,7 +11,13 @@
   "author": "jm_b",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "JSONStream": "^1.0.4",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
+    "postgresql": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
